# vk_bot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: bot_deploy.yml
app/: __init__.py  main.py  routes.py
app/actions/: __init__.py  abstract.py  exceptions.py  get_online_players.py  get_players_checks.py  get_rcc_players.py
app/core/: bot.py  config.py  constants.py  delayed_tasks.py  logs.py
app/filtres/: __init__.py  abc.py  executor.py  rcc_filtres.py
app/handlers/: __init__.py  ping.py
app/handlers/bans/: __init__.py  get_players_bans.py
app/handlers/main/: __init__.py  ping.py
app/handlers/report/: __init__.py
app/renders/: __init__.py  abc.py  rcc_bans.py
docker/bot/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
services/RCC/: __init__.py  models.py  rcc_api.py  rcc_cache.py
services/server/: __init__.py  models.py  server_api.py
tests/: conftest.py  utils.py
tests/test_services/: conftest.py  factories.py  test_server_api.py
utils/: file_settings.py  random_gen.py  utils.py
utils/handlers/: __init__.py  cmd_handler.py  exceptions.py  mixins.py
utils/http/: api_client.py  client.py
utils/labelers/: __init__.py  cmd_labeler.py
